--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<app-encabezado></app-encabezado>           
-<app-carrucel></app-carrucel>
-<app-card-productos></app-card-productos>
+<app-encabezado></app-encabezado>   
+<br>        
+<router-outlet></router-outlet>
 <app-pie></app-pie>
 
 
