--- a/src/app/encabezado/encabezado.component.html
+++ b/src/app/encabezado/encabezado.component.html
@@ -6,7 +6,7 @@
       <!-- Brand -->
       <a class="navbar-brand me-2 mb-1 d-flex align-items-center" href="#">
         <img
-          src=""
+          src="file:///C:/Users/utm23/Downloads/Quesabirrias_LOGO.jpg"
           height="20"
           alt="LOGO"
           loading="lazy"
@@ -52,7 +52,7 @@
       </li>
 
       <li class="nav-item me-3 me-lg-1">
-        <a class="nav-link" href="#">
+        <a class="nav-link" href="Compras">
           <span><i class="fas fa-shopping-bag fa-lg"></i></span>
         </a>
       </li>
@@ -69,15 +69,15 @@
     <!-- Right elements -->
     <ul class="navbar-nav flex-row">
       <li class="nav-item me-3 me-lg-1">
-        <a class="nav-link d-sm-flex align-items-sm-center" href="#">
+        <a class="nav-link d-sm-flex align-items-sm-center" href="Registro">
           <img
-            src="https://mdbcdn.b-cdn.net/img/new/avatars/1.webp"
+            src=""
             class="rounded-circle"
             height="22"
-            alt="Black and White Portrait of a Man"
+            alt="Perfil"
             loading="lazy"
           />
-          <strong class="d-none d-sm-block ms-1">John</strong>
+          <strong class="d-none d-sm-block ms-1">User</strong>
         </a>
       </li>
       <li class="nav-item me-3 me-lg-1">
