--- a/src/app/pie/pie.component.html
+++ b/src/app/pie/pie.component.html
@@ -78,7 +78,7 @@
   
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
-      © 2020 Copyright:
+      Que Sabor_Official
       <a class="text-body" href="https://mdbootstrap.com/">MDBootstrap.com</a>
     </div>
     <!-- Copyright -->
