--- a/src/app/encabezado/encabezado.component.html
+++ b/src/app/encabezado/encabezado.component.html
@@ -4,15 +4,14 @@
     <!-- Left elements -->
     <div class="d-flex">
       <!-- Brand -->
-      <a class="navbar-brand me-2 mb-1 d-flex align-items-center" href="#">
+
         <img
-          src="file:///C:/Users/utm23/Downloads/Quesabirrias_LOGO.jpg"
-          height="20"
+          src="src\app\imagenes\Quesabirrias_LOGO.jpg"
+          height="70"
           alt="LOGO"
           loading="lazy"
           style="margin-top: 2px;"
         />
-      </a>
 
       <!-- Search form -->
       <form class="input-group w-auto my-auto d-none d-sm-flex">
@@ -71,7 +70,7 @@
       <li class="nav-item me-3 me-lg-1">
         <a class="nav-link d-sm-flex align-items-sm-center" href="Registro">
           <img
-            src=""
+            src="src\app\imagenes\usuario.png"
             class="rounded-circle"
             height="22"
             alt="Perfil"
