--- a/src/app/card-productos/card-productos.component.html
+++ b/src/app/card-productos/card-productos.component.html
@@ -37,7 +37,7 @@
       </div>
       <div class="card-body">
         <h5 class="card-title">Enchiladas Verdes</h5>
-        <p class="card-text">Tortilla de maíz enrollada rellena de carne y cubierta de salsa de jitomate con chile.</p>
+        <p class="card-text">Tortilla de maíz enrollada rellena de carne y cubierta de salsa de tomate con chile.</p>
         <a href="#!" class="btn btn-primary" data-mdb-ripple-init>Agregar al carrito</a>
       </div>
     </div>  
